# mood-tracker

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_seed_catalog.py  0003_two_post_lifecycle.py  0004_device_id_string.py  0005_catalog_localization.py
app/: __init__.py  main.py
app/api/: __init__.py  audio.py  deps.py  middleware.py  serializers.py
app/api/v1/: router.py
app/core/: __init__.py  config.py  errors.py  logging.py  rate_limit.py
app/db/: __init__.py  base.py  session.py
app/db/models/: __init__.py  analysis.py  catalog.py  device.py  entry.py  enums.py  gamification.py
app/llm/: __init__.py  analysis_schema.py  language.py  openai_client.py  transcription.py
app/llm/prompts/: __init__.py  registry.py  v1.py
app/schemas/: catalog.py  entries.py  me.py  transcription.py
app/seed/: __init__.py  catalog_seed.py
app/services/: analysis.py  catalog.py  entry.py  points.py  streak.py
docker/: entrypoint.sh
docs/: 00-vision.md  01-architecture.md  02-tech-stack.md  03-data-model.md  04-api-contract.md  05-security.md  06-testing-strategy.md  07-deployment.md  100-known-tech-debt.md  99-open-questions.md  README.md
docs/adr/: ADR-001-stack-choice.md  ADR-002-monolith.md  ADR-003-entry-state-machine.md  ADR-004-stateless-transcription.md  ADR-005-structured-llm-output.md  ADR-006-language-handling.md  ADR-007-device-id-identity.md  ADR-008-llm-connection-management.md  ADR-009-app-level-api-key.md  ADR-010-catalog-localization.md  INDEX.md
docs/modules/catalog/: README.md  emotion_catalog.tsv
docs/modules/entries/: README.md
tests/: conftest.py  helpers.py
tests/contract/: test_response_schemas.py
tests/integration/: test_auth.py  test_catalog.py  test_catalog_localization.py  test_connection_release.py  test_device_id.py  test_e2e.py  test_entry_lifecycle.py  test_gamification.py  test_history.py  test_identity_security.py  test_llm.py  test_migrations.py  test_rate_limit.py  test_removed_routes.py  test_timezone_streak.py  test_transcription.py  test_validation.py
tests/unit/: test_audio.py  test_config_guard.py  test_language.py  test_streak.py
(+8 files in other folders)
