[project]
name = "mood-tracker"
version = "0.1.0"
description = "Mood Tracker backend — anonymous AI mood journaling service for iOS"
readme = "docs/README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.31",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "alembic>=1.13,<1.14",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "openai>=1.40,<2.0",
    "aiosqlite>=0.20,<0.21",
    # python-multipart: required by FastAPI to parse multipart/form-data
    # uploads for POST /transcriptions (infrastructural, not a feature dep).
    "python-multipart>=0.0.9,<0.1",
    # tzdata: ships the IANA tz database so zoneinfo works on Windows and
    # slim Docker images (needed for Q-GAME-2 streak by local date/timezone).
    "tzdata>=2024.1",
]

[project.optional-dependencies]
# Prod-only drivers (docs/07-deployment.md: PostgreSQL + Redis in prod).
# Local/dev uses SQLite + in-memory rate limiting and does not need these.
# Install in prod / CI with: uv sync --extra prod
prod = [
    "asyncpg>=0.29,<0.30",
    "redis>=5.0,<6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8,<0.9",
    "mypy>=1.13,<2.0",
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=5.0,<6.0",
    "httpx>=0.27,<0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ASYNC", "RUF"]
ignore = [
    "B008",  # FastAPI uses function calls (Depends/File/Form) in defaults
    # Ambiguous-unicode checks: the app is bilingual (EN/RU); Cyrillic letters in
    # the localized catalog are legitimate content, not look-alike typos.
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = ["redis.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
